[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/felt.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Watchword_regular_demo.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/CreateLobbyButton.gd" type="Script" id=3]
[ext_resource path="res://Scripts/JoinLobbyButton.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 90
font_data = ExtResource( 2 )

[node name="LobbyCreator" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 955.327, 540 )
scale = Vector2( 1.01146, 1.03079 )
texture = ExtResource( 1 )

[node name="CreateLobby" type="Label" parent="."]
margin_left = 287.871
margin_top = 480.4
margin_right = 913.871
margin_bottom = 711.4
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "CREATE"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinLobby" type="Label" parent="."]
margin_left = 870.576
margin_top = 480.4
margin_right = 1496.58
margin_bottom = 711.4
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "JOIN"
align = 1
valign = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NicknameLabel" type="Label" parent="."]
margin_left = 289.99
margin_top = 276.983
margin_right = 915.99
margin_bottom = 507.983
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "NICKNAME:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NicknameField" type="LineEdit" parent="."]
margin_left = 881.794
margin_top = 334.117
margin_right = 1451.79
margin_bottom = 448.117
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Player"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="CreateLobby" to="CreateLobby" method="_on_CreateLobby_mouse_entered"]
[connection signal="mouse_exited" from="CreateLobby" to="CreateLobby" method="_on_CreateLobby_mouse_exited"]
[connection signal="mouse_entered" from="JoinLobby" to="JoinLobby" method="_on_JoinLobby_mouse_entered"]
[connection signal="mouse_exited" from="JoinLobby" to="JoinLobby" method="_on_JoinLobby_mouse_exited"]
